# vislum

./: .gitignore  Cargo.toml  TODO.md  cap.rdc  output.spv  renderdoc.cap  test.vislum
assets/shaders/: base.wgsl  bindless.hlsl  test.wgsl
vislum-asset/: Cargo.toml
vislum-asset/examples/: basic_usage.rs
vislum-asset/src/: asset.rs  database.rs  lib.rs  loader.rs  manager.rs  path.rs  vfs.rs  virfs.rs
vislum-asset/src/fs/: editor.rs  memory.rs  mod.rs  physical.rs  vfs.rs
vislum-dxc/: Cargo.toml  build.rs
vislum-dxc/cpp/: conv.h  shim.cpp  wrapper.h
vislum-dxc/src/: lib.rs  sys.rs
vislum-editor/: Cargo.toml
vislum-editor/src/: command.rs  editor.rs  main.rs  util.rs
vislum-editor/src/graph/: commands.rs  introspect.rs  mod.rs  node.rs  pin.rs
vislum-fs/: Cargo.toml
vislum-fs/src/: lib.rs  physical.rs  watcher.rs
vislum-math/: Cargo.toml
vislum-math/src/: lib.rs
vislum-op/: Cargo.toml
vislum-op-std/: Cargo.toml
vislum-op-std/src/: lib.rs  math.rs
vislum-op/macros/: Cargo.toml
vislum-op/macros/src/: introspect.rs  lib.rs  node.rs  reflect.rs  value.rs
vislum-op/src/: animation.rs  compile.rs  data.rs  eval.rs  graph.rs  input.rs  introspect.rs  lib.rs  node.rs  node_type.rs  op.rs  output.rs  reflect.rs  system.rs  types.rs  value.rs
vislum-player/: Cargo.toml
vislum-player/src/: main.rs  wgpu_state.rs
vislum-render/: Cargo.toml
vislum-render-rhi/: Cargo.toml
vislum-render-rhi/src/: buffer.rs  format.rs  image.rs  image_view.rs  instance.rs  lib.rs  macros.rs  memory.rs  queue.rs  sampler.rs  surface.rs  swapchain.rs  sync.rs
vislum-render-rhi/src/command/: auto_command_buffer.rs  command_buffer.rs  mod.rs  tracker.rs  types.rs
vislum-render-rhi/src/descriptor/: mod.rs
vislum-render-rhi/src/device/: common.rs  device.rs  features.rs  mod.rs  physical.rs
vislum-render-rhi/src/image/: extent.rs  format.rs  image.rs  image_view.rs  mod.rs
vislum-render/src/: bind_group.rs  blit.wgsl  commands.rs  context.rs  device.rs  encoder.rs  handle.rs  lib.rs  material.rs  mesh.rs  pass.rs  pipeline.rs  queue.rs  render.rs  renderer.rs  resource.rs  scene.rs  shader.rs  shader_module.rs  storage.rs  surface.rs  system.rs  texture.rs  types.rs
vislum-render/src/asset/: material.rs  shader.rs  texture.rs
vislum-render/src/binding/: mod.rs
vislum-render/src/buffer/: buffer.rs  mod.rs  upload.rs
vislum-render/src/cache/: bind_group.rs  mod.rs  pipeline.rs  storage.rs  types.rs
vislum-render/src/descriptor/: mod.rs
vislum-render/src/graph/: encoder.rs  mod.rs  pass.rs  tracker.rs
vislum-render/src/material/: mod.rs
vislum-render/src/mesh/: mod.rs
vislum-render/src/pass/: blit.rs  draw.rs  forward.rs  forward.wgsl  mod.rs
vislum-render/src/pipeline/: graphics.rs  layout.rs  mod.rs  shader.rs
vislum-render/src/resource/: bind_group.rs  camera.rs  material.rs  mesh.rs  mod.rs  pipeline.rs  pool.rs  scene.rs  shader.rs  submit.rs  texture.rs  types.rs
vislum-render/src/resources/: bindless.rs  id.rs  mesh.rs  mod.rs  texture.rs
vislum-render/src/rhi/: buffer.rs  command.rs  debug.rs  device.rs  image.rs  instance.rs  mod.rs  physical.rs  queue.rs  surface.rs  swapchain.rs  sync.rs  util.rs
vislum-render/src/scene/: mod.rs
vislum-render/src/screen/: mod.rs  window.rs
vislum-render/src/shader/: mod.rs  proc.rs
vislum-rhi/: Cargo.toml  README.md
vislum-rhi/macros/: Cargo.toml
vislum-rhi/macros/src/: lib.rs  wiring.rs
vislum-rhi/src/: instance.rs  lib.rs  macros.rs  queue.rs  surface.rs  swapchain.rs  sync.rs  version.rs
vislum-rhi/src/buffer/: buffer.rs  mod.rs
vislum-rhi/src/command/: buffer.rs  mod.rs  pool.rs
vislum-rhi/src/command_buffer/: buffer.rs  mod.rs  pool.rs
vislum-rhi/src/descriptor/: layout.rs  mod.rs  pool.rs  set.rs
vislum-rhi/src/device/: device.rs  ffi.rs  mod.rs  physical.rs
vislum-rhi/src/image/: color.rs  format.rs  image.rs  layout.rs  mod.rs  sampler.rs  view.rs
vislum-rhi/src/memory/: allocator.rs
vislum-rhi/src/pipeline/: graphics.rs  mod.rs  shader.rs
vislum-runtime/: Cargo.toml
vislum-runtime/src/: lib.rs
vislum-shader/: Cargo.toml
vislum-shader/src/: compiler.rs  composer.rs  directive.rs  lib.rs
vislum-system/: Cargo.toml
vislum-system/macros/: Cargo.toml
vislum-system/macros/src/: lib.rs
vislum-system/src/: event.rs  lib.rs  system.rs
vislum-test/: Cargo.toml
vislum-test/shaders/: common.hlsl  quad.frag.hlsl  quad.vert.hlsl
vislum-test/src/: bindless_demo.rs  main.rs
vislum-window/: Cargo.toml
vislum-window/src/: app.rs  lib.rs  window.rs
vislum_asset/: Cargo.toml
vislum_asset/src/: asset.rs  database.rs  fs.rs  lib.rs  loader.rs  path.rs  shader.rs  system.rs
vislum_asset/src/fs/: editor.rs  memory.rs
