[workspace]
resolver = "2"
members = ["vislum-player", "vislum-editor", "vislum-render", "vislum_asset", "vislum-runtime", "vislum-op", "vislum-system", "vislum-op-std", "vislum-math"]

[workspace.dependencies]
derive_more = { version = "2", features = ["full"] }
thiserror = "2.0.12"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
atomicow = "1.1.0"
crossbeam = "0.8.4"
slotmap = { version = "1.0", features = ["serde"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
smallbox = { version = "0.8.8" }
bitflags = "2.9.3"
