[workspace]
resolver = "3"
members = ["vislum-player", "vislum-editor", "vislum-render", "vislum-asset", "vislum-runtime", "vislum-op", "vislum-system", "vislum-op-std", "vislum-math", "vislum-shader", "vislum-test"]

[workspace.dependencies]
ash-window = "0.13"
atomicow = "1.1.0"
bitflags = "2.9.3"
crossbeam = "0.8.4"
derive_more = { version = "2", features = ["full"] }
downcast-rs = "2.0.2"
env_logger = "0.10"
log = "0.4"
naga = "25.0"
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_json = "1.0.140"
slotmap = { version = "1.0", features = ["serde"] }
smallbox = { version = "0.8.8" }
smallvec = "1.19.0"
static_assertions = "1.1.0"
thiserror = "2.0.12"
uuid = { version = "1.18.0", features = ["v4", "serde"] }
wgpu = "25.0"
winit = "0.30.12"