[package]
name = "vislum-op"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = { workspace = true }
atomicow = { workspace = true }
serde = { workspace = true }
slotmap = { version = "1.0", features = ["serde"] }
vislum-op-macros = { path = "macros" }
serde_json = { workspace = true }
uuid = { workspace = true }