[package]
name = "vislum-op"
version = "0.1.0"
edition = "2024"

[dependencies]
atomicow = { workspace = true }
bitflags = { workspace = true }
derive_more = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
slotmap = { version = "1.0", features = ["serde"] }
smallbox = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
vislum-math = { path = "../vislum-math" }
vislum-op-macros = { path = "macros" }
vislum-system = { path = "../vislum-system" }