[package]
name = "vislum-render-rhi"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { workspace = true }
ash-window = { workspace = true }
bitflags = { workspace = true }
smallvec = { workspace = true }
gpu-allocator = { workspace = true, features = ["vulkan"] }
winit = { workspace = true }