[package]
name = "vislum-render"
version = "0.1.0"
edition = "2024"

[dependencies]
vislum-render-rhi = { path = "../vislum-render-rhi" }
bitflags = { workspace = true }
serde = { workspace = true }
smallvec = { workspace = true }
static_assertions = { workspace = true }
vislum-dxc = { path = "../vislum-dxc" }
thiserror = { workspace = true }
slotmap = { workspace = true }
crossbeam-channel = { workspace = true }
winit = { workspace = true }
bytemuck = { version = "1.24.0", features = ["derive"] }
ash = { workspace = true }