[package]
name = "vislum-test"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vislum-test"
path = "src/main.rs"

[dependencies]
vislum-shader = { path = "../vislum-shader" }
vislum-render = { path = "../vislum-render" }
vislum-render-rhi = { path = "../vislum-render-rhi" }
winit = { workspace = true }
ash = { workspace = true }
gpu-allocator = { workspace = true, features = ["vulkan"] }
env_logger = { workspace = true }
log = { workspace = true }
image = "0.25"
anyhow = "1.0"
bytemuck = "1.24.0"